tests/snapshots/test_lifecycle__bump_nonexistent_rfc.snap
---
source: tests/test_lifecycle.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc bump RFC-9999 --patch --summary Fix
error[E0102]: RFC not found: RFC-9999 (RFC-9999)
exit: 1
