tests/snapshots/test_lifecycle__bump_rejects_changelog_only_after_signature_baseline.snap
---
source: tests/lifecycle_tests/rfc_cases/bump.rs
expression: snapshot
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc advance RFC-0001 impl
Advanced RFC-0001 to phase: impl
exit: 0

$ govctl rfc advance RFC-0001 test
Advanced RFC-0001 to phase: test
exit: 0

$ govctl rfc advance RFC-0001 stable
Advanced RFC-0001 to phase: stable
exit: 0

$ govctl rfc bump RFC-0001 --change Added changelog note
Added change to RFC-0001 v0.1.0: Added changelog note
exit: 0

$ govctl rfc bump RFC-0001 --patch --summary Changelog-only bump
error[E0113]: RFC version bump requires RFC or clause content changes since the last bump (RFC-0001)
exit: 1

$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "0.1.0",
    "status": "normative",
    "phase": "stable",
    "title": "Test RFC"
  }
]
exit: 0
