tests/snapshots/test_lifecycle__bump_requires_summary.snap
---
source: tests/test_lifecycle.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc bump RFC-0001 --patch
error[E0108]: --summary is required when bumping version (RFC-0001)
exit: 1
