tests/snapshots/test_lifecycle__bump_with_change.snap
---
source: tests/test_lifecycle.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc finalize RFC-0001 normative
Finalized RFC-0001 to status: normative
exit: 0

$ govctl rfc bump RFC-0001 --change Added new clause
Added change to RFC-0001 v0.1.0: Added new clause
exit: 0

$ govctl rfc show RFC-0001
# RFC-0001: Test RFC

> **Version:** 0.1.0 | **Status:** normative | **Phase:** spec
> **Owners:** @test-user

---

## 1. Summary

---

## 2. Specification

---

## Changelog

### v0.1.0 (<DATE>)

Initial draft

#### Added

- Added new clause
exit: 0
