tests/snapshots/test_lifecycle__deprecate_clause_force.snap
---
source: tests/lifecycle_tests/clause.rs
expression: snapshot
---
$ govctl rfc new Deprecate Clause RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-ONE Clause One -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-ONE.toml
  Added to section 'Specification', path: clauses/C-ONE.toml
exit: 0

$ govctl clause deprecate RFC-0001:C-ONE --force
Deprecated clause: RFC-0001:C-ONE
exit: 0

$ govctl clause list
[
  {
    "id": "C-ONE",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "deprecated",
    "title": "Clause One"
  }
]
exit: 0
